src/pages/admin/app/Product/ProductList/ProductList.module.scss
.productMenu {
   width: 100%;
   position: relative;


   form {
      width: 90%;
      display: flex;
      align-items: center;
      justify-content: center;
      margin-top: 5%;
      margin-left: 5%;

      .search {
         border-radius: 8px;
         border: 1px solid var(--laranja-main);
         padding: 5px 40px 5px 20px;
         width: 90%;
         height: 40px;
         font-size: 16px;
         background-color: transparent;
         color: rgb(76, 76, 76);
         max-width: 500px;

         &:focus {
            outline: none;
         }
      }

   }
}

.producsList {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-content: center;
   align-items: center;
   width: 100%;
   max-height: 80vh;
   overflow-y: scroll;
   margin-top: 5%;
   padding-left: 10%;
   padding-right: 10%;
}

.productCard {

   display: flex;
   flex-direction: column;
   background-color: var(--cinza-escuro);
   color: var(--laranja-main);
   height: 300px;
   width: 250px;
   min-height: 300px;
   margin-bottom: 5%;
   justify-content: center;
   cursor: pointer;
   border-radius: 8px;
   transition: 0.2s;
   padding-top: 10px;

   &:hover {
      background-color: rgb(196, 195, 195);
   }


   p {
      margin-left: 5%;
      margin-top: 2%;
   }

   .productTile {
      font-size: 1rem;
      margin-top: 3%;
      font-weight: bold;
      margin-bottom: 1%;
   }

   .imageContainer {
      display: flex;
      justify-content: center;
      align-items: flex-start;
   }

   .productImage {
      border-radius: 8px;
   }

}

.editProductModal {

   position: absolute;
   align-items: center;
   justify-content: center;
   right: 0;
   top: 0;
   display: flex;
   width: 100%;
   background: rgba(0, 0, 0, 0.944);
   height: auto;

   .deleteItem {
      cursor: pointer;
      border-radius: 8px;
      position: absolute;
      top: 3%;
      right: 8%;
      z-index: 2;
      transition: 0.2s;

      &:hover {
         background: #fff;
         opacity: 90%;
      }
   }

}

